update button problem

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
         <h4>Choose a topic for validation</h4>
         <ul>
-            <li id="name" style="list-style-type: none;"><button>Name</button></li>
-            <li id="email" style="list-style-type: none;"><button>Email</button></li>
-            <li id="number" style="list-style-type: none;"><button>Phone Number</button></li>
-            <li id="postcode" style="list-style-type: none;"><button>PostCode</button></li>
-            <li id="district" style="list-style-type: none;"><button>District</button></li>
+            <li style="list-style-type: none;"><button id="name">Name</button></li>
+            <li style="list-style-type: none;"><button id="email">Email</button></li>
+            <li style="list-style-type: none;"><button id="number">Phone Number</button></li>
+            <li style="list-style-type: none;"><button id="postcode">PostCode</button></li>
+            <li style="list-style-type: none;"><button id="district">District</button></li>
         </ul>
         </form>
         <hr>
